fix: Problemas en calculos de retenciones de clientes.

--- a/modules/binaural_facturacion/views/account_retention_islr.xml
+++ b/modules/binaural_facturacion/views/account_retention_islr.xml
@@ -81,13 +81,13 @@
                             <group col="2" colspan="2">
                                 <!--field name="amount_base_ret" attrs="{'invisible':[('type','in',[False,'out_invoice','out_refund','out_debit']) ]}" />
                                 <field name="amount_total_facture" attrs="{'invisible':[('type','in',[False,'in_invoice','in_refund','in_debit']) ]}" widget="monetary" options="{'currency_field': 'company_currency_id'}" /-->
-                                <field name="amount_total_facture" attrs="{'invisible':['|', ('multi_currency_retention','=', False), '&amp;' , ('multi_currency_retention','=', True), ('actual_currency_retention','=', True)]}" widget="monetary" options="{'currency_field': 'bs_currency_id'}" />
-                                <field name="amount_imp_ret" attrs="{'invisible':['|', ('multi_currency_retention','=', False), '&amp;' , ('multi_currency_retention','=', True), ('actual_currency_retention','=', True)]}" widget="monetary" options="{'currency_field': 'bs_currency_id'}"  />
-                                <field name="total_tax_ret" attrs="{'invisible':['|', ('multi_currency_retention','=', False), '&amp;' , ('multi_currency_retention','=', True), ('actual_currency_retention','=', True)]}" widget="monetary" options="{'currency_field': 'bs_currency_id'}"/>
+                                <field name="amount_total_facture" attrs="{'invisible': [('foreign_currency_id', '=', 3)]}" widget="monetary" options="{'currency_field': 'bs_currency_id'}" />
+                                <field name="amount_imp_ret" attrs="{'invisible': [('foreign_currency_id', '=', 3)]}" widget="monetary" options="{'currency_field': 'bs_currency_id'}"  />
+                                <field name="total_tax_ret" attrs="{'invisible': [('foreign_currency_id', '=', 3)]}" widget="monetary" options="{'currency_field': 'bs_currency_id'}"/>
 
-	                        <field name="foreign_amount_total_facture" attrs="{'invisible':[('multi_currency_retention','=', True), ('actual_currency_retention','=', False)]}" widget="monetary" options="{'currency_field': 'bs_currency_id'}" />
-                                <field name="foreign_amount_imp_ret" attrs="{'invisible':[('multi_currency_retention','=', True), ('actual_currency_retention','=', False)]}" widget="monetary" options="{'currency_field': 'bs_currency_id'}"  />
-                                <field name="foreign_total_tax_ret" attrs="{'invisible':[('multi_currency_retention','=', True), ('actual_currency_retention','=', False)]}" widget="monetary" options="{'currency_field': 'bs_currency_id'}"/>
+	                        <field name="foreign_amount_total_facture" attrs="{'invisible': [('foreign_currency_id', '=', 2)]}" widget="monetary" options="{'currency_field': 'bs_currency_id'}" />
+                                <field name="foreign_amount_imp_ret" attrs="{'invisible': [('foreign_currency_id', '=', 2)]}" widget="monetary" options="{'currency_field': 'bs_currency_id'}"  />
+                                <field name="foreign_total_tax_ret" attrs="{'invisible': [('foreign_currency_id', '=', 2)]}" widget="monetary" options="{'currency_field': 'bs_currency_id'}"/>
                             </group>
                         </page>
                         <page string="Otra Información">
