--- a/modules/binaural_facturacion/views/account_municipality_retention.xml
+++ b/modules/binaural_facturacion/views/account_municipality_retention.xml
@@ -21,7 +21,7 @@
                     </group>
                     <notebook>
                         <page string="Linea de Retención">
-                            <field name="retention_line_ids" />
+                            <field name="retention_line_ids" attrs="{'invisible': [('partner_id','=', False)]}"/>
                         </page>
                     </notebook>
                 </sheet>
