issue: Estructura de Asiento contable para la retención de Impuestos Municipales Proveedores

--- a/modules/binaural_contactos_configuraciones/views/views.xml
+++ b/modules/binaural_contactos_configuraciones/views/views.xml
@@ -362,6 +362,7 @@
             <field name="model">res.country.municipality</field>
             <field name="arch" type="xml">
                 <tree editable="bottom">
+                    <field name="active" invisible="1"/>
                     <field name="country_id" />
                     <field name="state_id" widget="many2many_tags" domain="[('country_id.code','ilike','ve')]" />
                     <field name="name" />
@@ -377,6 +378,7 @@
                 <form string="Município">
                     <sheet string="Município">
                         <group>
+                            <field name="active" invisible="1"/>
                             <field name="country_id" />
                             <field name="state_id" widget="many2many_tags" domain="[('country_id.code','ilike','ve')]" />
                             <field name="name" />
