--- a/modules/binaural_ventas/views/sale_trees_inh.xml
+++ b/modules/binaural_ventas/views/sale_trees_inh.xml
@@ -35,8 +35,9 @@
                     <field name="phone" optional="show"/>                
                 </field>
 	            <field name="amount_total" position="before">
-                    <field name="foreign_currency_rate" optional="show"/>
-                    <field name="foreign_amount_total" optional="show"/>
+                    <field name="foreign_currency_id" invisible="1"/>
+                    <field name="foreign_currency_rate" optional="show"  />
+                    <field name="foreign_amount_total" optional="show" widget="monetary" options="{'currency_field': 'foreign_currency_id'}"/>
                 </field>
             </field>
         </record>
