fix: cambio en simbolo moneda alterna compras

--- a/modules/binaural_compras/views/purchase_trees_inh.xml
+++ b/modules/binaural_compras/views/purchase_trees_inh.xml
@@ -15,8 +15,9 @@
                     <field name="phone" optional="show"/>                
                 </field>
 	            <field name="amount_total" position="before">
+                    <field name="foreign_currency_id" optional="show" invisible="1"/>
                     <field name="foreign_currency_rate" optional="show"/>
-                    <field name="foreign_amount_total" optional="show"/>
+                    <field name="foreign_amount_total" optional="show" widget="monetary" options="{'currency_field': 'foreign_currency_id'}"/>
                 </field>
             </field>
         </record>
@@ -34,8 +35,9 @@
                     <field name="phone" optional="show"/>                
                 </field>
 	            <field name="amount_total" position="before">
+                    <field name="foreign_currency_id" optional="show" invisible="1"/>
                     <field name="foreign_currency_rate" optional="show"/>
-                    <field name="foreign_amount_total" optional="show"/>
+                    <field name="foreign_amount_total" optional="show" widget="monetary" options="{'currency_field': 'foreign_currency_id'}"/>
                 </field>
             </field>
         </record>
@@ -53,8 +55,9 @@
                     <field name="phone" optional="show"/>                
                 </field>
 	            <field name="amount_total" position="before">
+                    <field name="foreign_currency_id" optional="show" invisible="1"/>
                     <field name="foreign_currency_rate" optional="show"/>
-                    <field name="foreign_amount_total" optional="show"/>
+                    <field name="foreign_amount_total" optional="show" widget="monetary" options="{'currency_field': 'foreign_currency_id'}"/>
                 </field>
             </field>
         </record>
