issue: Formato de Excel de Listado de Retenciones de Impuestos Municipales de Proveedores

--- a/modules/binaural_facturacion/views/account_municipality_retention.xml
+++ b/modules/binaural_facturacion/views/account_municipality_retention.xml
@@ -5,8 +5,9 @@
         <field name="arch" type="xml">
             <form string="Retention">
                 <header>
-                    <button name="action_validate" attrs="{'invisible': [('name','!=', False)]}" type="object" string="Validar" class="btn btn-primary" />
+                    <button name="action_validate" attrs="{'invisible': [('state','!=', 'draft')]}" type="object" string="Validar" class="btn btn-primary" />
                     <button name="action_open_wizard" type="object" string="Descargar Comprobante" class="btn btn-primary" />
+                    <field name="state" widget="statusbar" nolabel="1"/>
                 </header>
                 <sheet>
                     <group>
