--- a/modules/binaural_facturacion/views/account_move_form_inh.xml
+++ b/modules/binaural_facturacion/views/account_move_form_inh.xml
@@ -12,6 +12,7 @@
                 </field>
 
                 <xpath expr="//div[@name='journal_div']" position="after">
+		    <field name="inverse_rate"/>
                     <label for="generate_retencion_iva" attrs="{'invisible': [('move_type', 'not in', ('in_invoice','in_refund'))]}" />
                     <field name="generate_retencion_iva" nolabel="1" force_save="1" attrs="{'invisible': [('move_type', 'not in', ('in_invoice','in_refund'))]}" />
                     <label for="iva_voucher_number" attrs="{'invisible': [('move_type', 'not in', ('in_invoice','in_refund','out_invoice', 'out_refund'))]}" />
