fix: #44 Avances en ajuste de balance de comprobacion en $ (falta acomodar la interfaz)

--- a/modules/binaural_reporte_fiscal/report/account_checking_balance.xml
+++ b/modules/binaural_reporte_fiscal/report/account_checking_balance.xml
@@ -15,6 +15,9 @@
                        class="dropdown-item">View Journal Entry
                     </a>
                 </t>
+                <a role="menuitem" tabindex="-1" t-att-data-id="line['id']" action="open_document"
+                   class="dropdown-item">View Journal Entry
+                </a>
             </xpath>
         </template>
 
