fix: Campo tasa inversa como opcional oculto en la vista de lista de los apuntes contables.

--- a/modules/binaural_facturacion/views/account_move_line_inh.xml
+++ b/modules/binaural_facturacion/views/account_move_line_inh.xml
@@ -20,7 +20,7 @@
 		<tree position="inside">
 		    <field name="foreign_currency_rate"/>
 		    <field name="balance"/>
-		    <field name="inverse_rate"/>
+		    <field name="inverse_rate" optional="hide"/>
 		</tree>
             </field>
         </record>
