feat: Agregando campos 'Fecha de ingreso', 'Fecha de egreso' y 'Antigüedad' a la ficha de empleado.

--- a/modules/binaural_nomina/views/hr_employee_binaural.xml
+++ b/modules/binaural_nomina/views/hr_employee_binaural.xml
@@ -15,6 +15,12 @@
                     </div>
                 </group>
             </xpath>
+
+	    <field name="work_email" position="after">
+		<field name="entry_date"/>
+		<field name="egress_date"/>
+		<field name="seniority"/>
+	    </field>
         </field>
     </record>
 
