--- a/modules/binaural_reporte_fiscal/report/template_retention_iva_voucher.xml
+++ b/modules/binaural_reporte_fiscal/report/template_retention_iva_voucher.xml
@@ -172,14 +172,25 @@
             <div style="border-bottom:1px solid black" class="text-center">
 
                 <t t-set="total_amount_total" t-options='{"widget": "float", "precision": get_digits}'/>
-                <t t-set="total_amount_amount_except" t-value="0"/>
+                <t t-set="total_amount_amount_except" t-options='{"widget": "float", "precision": get_digits}' t-value="0"/>
                 <t t-set="amount_except" t-options='{"widget": "float", "precision": get_digits}'/>
+                <t t-set="total_amount_except" t-options='{"widget": "float", "precision": get_digits}' t-value="0"/>
 
-                <t t-set="facture_amount" t-options='{"widget": "float", "precision": get_digits}'/>
-                <t t-set="total_amount_tax" t-options='{"widget": "float", "precision": get_digits}'/>
+                <t t-set="facture_amount" t-options='{"widget": "float", "precision": get_digits}' t-value='0'/>
+                <t t-set="total_amount_tax" t-options='{"widget": "float", "precision": get_digits}' t-value='0'/>
                 <!--retenido-->
                 <t t-set="porcentage_retention" t-options='{"widget": "float", "precision": get_digits}'/>
-                <t t-set="total_amount_to_pay" t-options='{"widget": "float", "precision": get_digits}'/>
+                <t t-set="total_amount_to_pay" t-options='{"widget": "float", "precision": get_digits}' t-value='0'/>
+
+                <t t-set="excent" t-options='{"widget": "float", "precision": get_digits}' t-value='0'></t>
+
+
+                <!--Compras sin derecho a credito IVA -->  
+                <t t-foreach="set(retention.retention_line.invoice_id.mapped('id'))" t-as="n">
+                    <t t-foreach="[line.amount_by_group[-1][-5] for line in retention.retention_line.invoice_id if line.id == n]" t-as="v">
+                        <t t-set="total_amount_except" t-value="total_amount_except + v"/>
+                    </t>
+                </t>   
 
 
                 <t t-foreach="retention.retention_line" t-as="line">
@@ -193,6 +204,7 @@
                                 <span>--</span>
                             </t>
                         </div>
+
                         <!--Número de Factura -->
                         <div class="" style="width:7%;">
                             <t t-if="line.invoice_type in ['in_invoice']">
@@ -205,6 +217,7 @@
                                 <span>--</span>
                             </t>
                         </div>
+
                         <!--Nro de Control Factura -->
                         <div class="" style="width:7%;">
                             <span t-esc="line.invoice_id.correlative"/>
@@ -299,17 +312,18 @@
                             <t t-set="amount_except" t-value="total_amount_amount_except + amount_except"/>
                         </div>
 
+
                         <!-- Base Imponible -->
                         <div class="" style="width:10%">
 			    <t t-if="get_foreign_currency_id == 3">
                             	<span t-esc="line.foreign_facture_amount"
                                       t-options='{"widget": "float", "precision": get_digits}'/>
-                            	<t t-set="facture_amount" t-value="facture_amount + str(line.foreign_facture_amount)"/>
+                            	<t t-set="facture_amount" t-value="float(facture_amount) + line.foreign_facture_amount"/>
 			    </t>
 			    <t t-else="">
                             	<span t-esc="line.facture_amount"
                                       t-options='{"widget": "float", "precision": get_digits}'/>
-                            	<t t-set="facture_amount" t-value="facture_amount + str(line.facture_amount)"/>
+                            	<t t-set="facture_amount" t-value="float(facture_amount) + line.facture_amount"/>
 			    </t>
                         </div>
 
@@ -319,8 +333,7 @@
                         </div>
                         <!-- % Ret -->
                         <div class="" style="width:7%">
-                            <span t-esc="'{0:,.2f}'.format(line.porcentage_retention).replace('.', ',')"/>
-                            <t t-set="porcentage_retention" t-value="porcentage_retention + str(line.porcentage_retention)"/>
+                            <span t-esc="'{0:,.2f}'.format(line.tax_line).replace('.', ',')"/>
                         </div>
 
                         <!-- Impuesto IVA -->
@@ -328,12 +341,12 @@
 			    <t t-if="get_foreign_currency_id == 3">
                             	<span t-esc="line.foreign_iva_amount"
                                       t-options='{"widget": "float", "precision": get_digits}'/>
-                        	<t t-set="total_amount_tax" t-value="total_amount_tax + str(line.foreign_iva_amount)"/>
+                        	<t t-set="total_amount_tax" t-value="total_amount_tax + line.foreign_iva_amount"/>
 			    </t>
 			    <t t-else="">
                             	<span t-esc="line.iva_amount"
                                       t-options='{"widget": "float", "precision": get_digits}'/>
-                        	<t t-set="total_amount_tax" t-value="total_amount_tax + str(line.iva_amount)"/>
+                        	<t t-set="total_amount_tax" t-value="total_amount_tax + line.iva_amount"/>
 			    </t>
                         </div>
 
@@ -343,14 +356,15 @@
                             	<span t-esc="line.foreign_retention_amount"
                                       t-options='{"widget": "float", "precision": get_digits}'/>
                             </div>
-                            <t t-set="total_amount_to_pay" t-value="total_amount_to_pay + str(line.foreign_retention_amount)"/>
+                            <t t-set="total_amount_to_pay" t-value="float(total_amount_to_pay + line.foreign_retention_amount)"/>
 			</t>
 			<t t-else="">
                             <div class="" style="width:10%">
                             	<span t-esc="line.retention_amount"
                                       t-options='{"widget": "float", "precision": get_digits}'/>
                             </div>
-                            <t t-set="total_amount_to_pay" t-value="total_amount_to_pay + str(line.retention_amount)"/>
+                            
+                            <t t-set="total_amount_to_pay" t-value="float(total_amount_to_pay + line.retention_amount) "/>
 			</t>
                     </div>
                 </t>
@@ -383,26 +397,25 @@
                         <span style="visibility:hidden">--</span>
                     </div>
                     <div class="" style="width:7%">
-                        <span t-esc="amount_except"
+                        <span t-esc="total_amount_except "
                               t-options='{"widget": "float", "precision": get_digits}'/>
                     </div>
                     <div class="" style="width:10%">
-			<span t-esc="float('.'.join(facture_amount.split('.')[:2]))"
+			            <span t-esc="facture_amount"
                               t-options='{"widget": "float", "precision": get_digits}'/>
                     </div>
                     <div class="" style="width:7%">
                         <span style="visibility:hidden">--</span>
                     </div>
                     <div class="" style="width:7%">
-                        <span t-esc="float('.'.join(porcentage_retention.split('.')[:2]))"
+                        <span style="visibility:hidden">--</span>
+                    </div>
+                    <div class="" style="width:10%">
+                        <span t-esc="total_amount_tax"
                               t-options='{"widget": "float", "precision": get_digits}'/>
                     </div>
                     <div class="" style="width:10%">
-                        <span t-esc="float('.'.join(total_amount_tax.split('.')[:2]))"
-                              t-options='{"widget": "float", "precision": get_digits}'/>
-                    </div>
-                    <div class="" style="width:10%">
-                        <span t-esc="float('.'.join(total_amount_to_pay.split('.')[:2]))"
+                        <span t-esc="float(total_amount_to_pay)"
                               t-options='{"widget": "float", "precision": get_digits}'/>
                     </div>
 
