--- a/modules/binaural_reporte_fiscal/report/template_retention_iva_voucher.xml
+++ b/modules/binaural_reporte_fiscal/report/template_retention_iva_voucher.xml
@@ -479,6 +479,8 @@
         </div>
 
         <!--Body-->
+        <t t-set="imp" t-options='{"widget": "float", "precision": get_digits}' t-value='0' />
+
         <div class="container" style="font-size:12px !important;margin-top:10px!important">
             <div class="row">
                 <div class="col-8">
@@ -674,9 +676,11 @@
                         <t t-set="retention_amount" t-value="0"/>
                         <div style="width:15%">
 			    <t t-if="get_foreign_currency_id == 3">
+                        <t t-set="imp" t-value="float(imp + line.foreign_retention_amount)"/>
                             	<span t-field="line.foreign_retention_amount" />
 		    	    </t>
 			    <t t-else="">
+                        <t t-set="imp" t-value="float(imp + line.retention_amount)"/>
                             	<span t-field="line.retention_amount" />
 		    	    </t>
                         </div>
@@ -711,16 +715,13 @@
                         <span style="visibility:hidden">--</span>
                     </div>
                     <div class="" style="width:12%">
-			            <span t-esc="111"/>
+			            <span t-esc="imp" t-options='{"widget": "float", "precision": get_digits}' />
                     </div>
                     
 
                 </div>
             </div>
         </div>
-        
-
-        
         
 
         <!--<div style="margin-top:20px;font-size:12px !important;" class="container">
