--- a/modules/binaural_nomina/views/hr_employee_binaural.xml
+++ b/modules/binaural_nomina/views/hr_employee_binaural.xml
@@ -22,6 +22,40 @@
 		<field name="seniority"/>
 	    </field>
 
+	    <xpath expr="//field[@name='identification_id'][1]" position="attributes">
+		<attribute name="invisible">1</attribute>
+	    </xpath>
+
+	    <xpath expr="//page[@name='personal_information']" position="inside">
+		<group string="Datos Personales">
+		    <label for="identification_id" string="RIF"/>
+			<div id="vat" class="">
+			    <field name="prefix_vat"/>
+			    <field name="identification_id"/>
+			</div>
+		    <field name="house_type"/>
+		</group>
+	    </xpath>
+
+	    <field name="country_id" position="after">
+		<span class="o_form_label o_td_label" name="address_name">
+		    <b>Dirección</b>
+		</span>
+		<div class="o_address_format">
+		    <field name="street" placeholder="Calle..." class="o_address_street"/>
+		    <field name="street2" placeholder="Calle 2..." class="o_address_street"/>
+		    <field name="state_id" class="o_address_state" placeholder="Estado" 
+			   context="{'country_id': country_id, 'default_country_id': country_id, 'zip': zip}"/>
+		    <field name="city_id" placeholder="Ciudad" class="o_address_city"/>
+		    <field name="zip" placeholder="C.P" class="o_address_zip"/>
+		    <field name="municipality_id" placeholder="Municipio"/>
+		</div>
+	    </field>
+
+	    <field name="private_email" position="after">
+	        <field name="private_mobile_phone" string="Teléfono celular"/>
+	    </field>
+
 	    <xpath expr="//page[@name='personal_information']/group/group[4]" position="attributes">
 		<attribute name="invisible">1</attribute>
 	    </xpath>
