fix: Validar que en campo de Egreso no permita guardar cambio si posee un contrato actual en estatus En Proceso, para que se deba poner todos los contratos en cancelado antes de registrar el campo de Egreso

--- a/modules/binaural_nomina/views/hr_employee_binaural.xml
+++ b/modules/binaural_nomina/views/hr_employee_binaural.xml
@@ -17,8 +17,10 @@
             </xpath>
 
 	    <field name="work_email" position="after">
+		<field name="has_open_contract"/>
 		<field name="entry_date"/>
-		<field name="egress_date"/>
+		<field name="departure_date"
+		       attrs="{'readonly': [('has_open_contract', '=', True)]}"/>
 		<field name="seniority"/>
 	    </field>
 
